Fix move and delete buttons alignemnt

--- a/Client/src/app/components/checklist-modal/checklist-modal.css
+++ b/Client/src/app/components/checklist-modal/checklist-modal.css
@@ -266,7 +266,7 @@ textarea {
   }
 
   .check-item {
-    align-items: flex-start;
+    align-items: center;
   }
 
   .check-item input[type="checkbox"] {
